corregido los errores